--- a/style.css
+++ b/style.css
@@ -8,7 +8,28 @@ h1{text-align: center;
         width: 50%;
     }
     #VS2{margin-left: 1%;
-        width: 50%;}
+        width: 50%;
+    }
         
         h2{text-align: center;
-        color: darkorange;}
+        color: darkorange;
+    }
+    body {
+        font-family: Arial, sans-serif;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    
+    .container {
+        text-align: center;
+        padding: 50px;
+    }
+    
+    .light-mode {
+        background-color: white;
+        color: black;
+    }
+    
+    .dark-mode {
+        background-color: black;
+        color: white;
+    }
